--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </button>
         
         <audio id="audio"></audio>
-        <p>PS : certaines blagues peuvent heurter <br> sensibilité des plus jeunes, Mika C</p>
+        <p>PS : certaines blagues peuvent heurter <br>la sensibilité des plus jeunes, Mika.</p>
 
     </div>
 
